# Motivtelecom_Diploma_UI

./: .gitignore  README.md  config.py  pyproject.toml  pytest.ini
motivtelecom/model/: app.py
motivtelecom/model/data/: data_for_tests.py
motivtelecom/model/helper/: parametrize.py
motivtelecom/model/pages/: cart_page.py  login_page.py  main_page.py  product_page.py  shop_page.py
motivtelecom/utils/: attach.py
notifications/: config.json
tests/: conftest.py  test_motiv_shop.py  test_motivtelecom.py
